--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
 	"author": "ernesto.maria <ernestomaria93@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"dev": "ts-node-dev --inspect --transpile-only  --ignore-watch node_modules src/shared/http/server.ts"
+		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only  --ignore-watch node_modules src/shared/http/server.ts"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/node": "^18.7.14",
 		"ts-node-dev": "^2.0.0",
+		"tsconfig-paths": "^4.1.0",
 		"typescript": "^4.8.2"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.18.1",
-		"express-async-errors": "^3.1.1"
+		"express-async-errors": "^3.1.1",
+		"pg": "^8.8.0",
+		"reflect-metadata": "^0.1.13",
+		"typeorm": "0.2.29"
 	}
 }
