--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"author": "ernesto.maria <ernestomaria93@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only  --ignore-watch node_modules src/shared/http/server.ts"
+		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only  --ignore-watch node_modules src/shared/http/server.ts",
+		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
