--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/express": "^4.17.13",
 		"@types/joi": "^17.2.3",
 		"@types/jsonwebtoken": "^8.5.9",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^18.7.14",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
@@ -27,6 +28,7 @@
 		"express": "^4.18.1",
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^8.5.1",
+		"multer": "^1.4.5-lts.1",
 		"pg": "^8.8.0",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "0.2.29"
