--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.7.14",
+		"@types/nodemailer": "^6.4.6",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
 		"typescript": "^4.8.2"
@@ -30,6 +31,7 @@
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.7.8",
 		"pg": "^8.8.0",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "0.2.29"
