--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"celebrate": "^15.0.1",
+		"class-transformer": "^0.5.1",
 		"cors": "^2.8.5",
 		"date-fns": "^2.29.3",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.1",
 		"express-async-errors": "^3.1.1",
 		"handlebars": "^4.7.7",
