--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 		"@types/bcryptjs": "^2.4.2",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/ioredis": "^5.0.0",
 		"@types/joi": "^17.2.3",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.7.14",
 		"@types/nodemailer": "^6.4.6",
+		"@types/redis": "^4.0.11",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
 		"typescript": "^4.8.2"
@@ -32,10 +34,12 @@
 		"express": "^4.18.1",
 		"express-async-errors": "^3.1.1",
 		"handlebars": "^4.7.7",
+		"ioredis": "^5.2.4",
 		"jsonwebtoken": "^8.5.1",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.7.8",
 		"pg": "^8.8.0",
+		"redis": "^4.5.1",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "0.2.29"
 	}
