--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.7.8",
 		"pg": "^8.8.0",
+		"rate-limiter-flexible": "^2.4.1",
 		"redis": "^4.5.1",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "0.2.29"
