--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"handlebars": "^4.7.7",
 		"ioredis": "^5.2.4",
 		"jsonwebtoken": "^8.5.1",
+		"mime": "^3.0.0",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.7.8",
 		"pg": "^8.8.0",
