--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only  --ignore-watch node_modules src/shared/http/server.ts",
-		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+		"build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.19.3",
+		"@babel/core": "^7.20.5",
+		"@babel/node": "^7.20.5",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/plugin-proposal-decorators": "^7.20.5",
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-typescript": "^7.18.6",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
@@ -20,6 +28,8 @@
 		"@types/node": "^18.7.14",
 		"@types/nodemailer": "^6.4.6",
 		"@types/redis": "^4.0.11",
+		"babel-plugin-module-resolver": "^4.1.0",
+		"babel-plugin-transform-typescript-metadata": "^0.3.2",
 		"ts-node-dev": "^2.0.0",
 		"tsconfig-paths": "^4.1.0",
 		"typescript": "^4.8.2"
