--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+ormconfig.json
 
 # TypeScript v1 declaration files
 typings/
