--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,9 +5,9 @@
 	"username": "postgres",
 	"password": "docker",
 	"database": "apivendas",
-	"entities": ["./dist/modules/**/typeorm/entities/*.js"],
-	"migrations": ["./dist/shared/typeorm/migrations/*.js"],
+	"entities": ["./src/modules/**/typeorm/entities/*.ts"],
+	"migrations": ["./src/shared/typeorm/migrations/*.ts"],
 	"cli": {
-		"migrationsDir": "./dist/shared/typeorm/migrations"
+		"migrationsDir": "./src/shared/typeorm/migrations"
 	}
 }
