refact role in users

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,23 @@
-APP_SECRET=
+JWT_SECRET= 
 APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
+
+#Mail Config: ethereal or SES
+MAIL_DRIVER = ses
+
+# Storage Config: disk or s3
+STORAGE_DRIVER=disk
+
+
+#AWS Credentials
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+## AMAZON SES Credentials
+#api-vendas-ses
+#SMTP Username:
+#SMTP Password: 
