--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only  --ignore-watch node_modules src/shared/infra/http/server.ts",
-		"typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+		"typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
 		"build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
 	},
 	"devDependencies": {
