--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-	"name": "ecommerce_backend",
-	"version": "1.0.0",
-	"main": "index.js",
-	"repository": "git@github.com:ernestopmaria/ecommerce_backend.git",
-	"author": "ernesto.maria <ernestomaria93@gmail.com>",
-	"license": "MIT",
-	"scripts": {
-		"dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only  --ignore-watch node_modules src/shared/infra/http/server.ts",
-		"typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-		"build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.19.3",
-		"@babel/core": "^7.20.5",
-		"@babel/node": "^7.20.5",
-		"@babel/plugin-proposal-class-properties": "^7.18.6",
-		"@babel/plugin-proposal-decorators": "^7.20.5",
-		"@babel/preset-env": "^7.20.2",
-		"@babel/preset-typescript": "^7.18.6",
-		"@types/bcryptjs": "^2.4.2",
-		"@types/cors": "^2.8.12",
-		"@types/express": "^4.17.13",
-		"@types/ioredis": "^5.0.0",
-		"@types/joi": "^17.2.3",
-		"@types/jsonwebtoken": "^8.5.9",
-		"@types/multer": "^1.4.7",
-		"@types/node": "^18.7.14",
-		"@types/nodemailer": "^6.4.6",
-		"@types/redis": "^4.0.11",
-		"babel-plugin-module-resolver": "^4.1.0",
-		"babel-plugin-transform-typescript-metadata": "^0.3.2",
-		"ts-node-dev": "^2.0.0",
-		"tsconfig-paths": "^4.1.0",
-		"typescript": "^4.8.2"
-	},
-	"dependencies": {
-		"aws-sdk": "^2.1271.0",
-		"bcryptjs": "^2.4.3",
-		"celebrate": "^15.0.1",
-		"class-transformer": "^0.5.1",
-		"cors": "^2.8.5",
-		"date-fns": "^2.29.3",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.1",
-		"express-async-errors": "^3.1.1",
-		"handlebars": "^4.7.7",
-		"ioredis": "^5.2.4",
-		"jsonwebtoken": "^8.5.1",
-		"mime": "^3.0.0",
-		"multer": "^1.4.5-lts.1",
-		"nodemailer": "^6.7.8",
-		"pg": "^8.8.0",
-		"rate-limiter-flexible": "^2.4.1",
-		"redis": "^4.5.1",
-		"reflect-metadata": "^0.1.13",
-		"tsyringe": "^4.7.0",
-		"typeorm": "0.2.29"
-	}
+  "name": "ecommerce_backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:ernestopmaria/ecommerce_backend.git",
+  "author": "ernesto.maria <ernestomaria93@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only  --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.5",
+    "@babel/node": "^7.20.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/ioredis": "^5.0.0",
+    "@types/jest": "^29.2.4",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.7.14",
+    "@types/nodemailer": "^6.4.6",
+    "@types/redis": "^4.0.11",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1271.0",
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
+    "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
+    "ioredis": "^5.2.4",
+    "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.8",
+    "pg": "^8.8.0",
+    "rate-limiter-flexible": "^2.4.1",
+    "redis": "^4.5.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0",
+    "typeorm": "0.2.29"
+  }
 }
