--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "es2016",
 		"module": "commonjs",
 		"lib": ["es6"],
 		"allowJs": true,
 		"outDir": "build",
-		"rootDir": "src",
+		"rootDir": ".",
 		"strict": true,
 		"noImplicitAny": true,
 		"strictPropertyInitialization": false,
