--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/plugin-proposal-decorators": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@swc/core": "^1.3.24",
+    "@swc/jest": "^0.2.24",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
